// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`listCodeDefinitionNames should return code definitions 1`] = `
{
  "message": 
"<list_code_definition_names_path>src/main.js</list_code_definition_names_path>
<list_code_definition_names_files>
TestClass
testFunction
</list_code_definition_names_files>"
,
  "type": "Reply",
}
`;

exports[`listCodeDefinitionNames should handle empty directory 1`] = `
{
  "message": 
"<list_code_definition_names_path>empty-dir</list_code_definition_names_path>
<list_code_definition_names_files>

</list_code_definition_names_files>"
,
  "type": "Reply",
}
`;

exports[`listCodeDefinitionNames should handle errors 1`] = `[Error: Directory not found]`;
